Finished Nav Bar spacing issues. Generated and initial setup of Hero Component

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -4,11 +4,17 @@
 
 // Nav
 
-.nav-container {
-  width: 100%;
+.nav-bar {
   height: 120px;
   padding: 30px;
   background-color: v.$dark;
+  @include mix.flex-row;
+  @include mix.flex-center;
+}
+
+.nav-container {
+  width: 100%;
+  max-width: 1600px;
   @include mix.flex-row;
   @include mix.flex-center;
 }
@@ -114,7 +120,7 @@ background-color: rgb(
 
 @media (min-width: 450px) {
   .menu-items-container a {
-    font-size: 24px !important;
+    font-size: 21px !important;
   }
 }
 
@@ -280,13 +286,7 @@ background-color: rgb(
 
 }
 
-
-
-
-
-
-
-@media (min-width: 1200px) {  
+@media (min-width: 1300px) {  
   .logo-container-desktop {
     display: none;
   }
@@ -331,8 +331,3 @@ background-color: rgb(
   }
 
 }
-
-
-
-
-
